* Fri Oct 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.1.1-0
- Puppet 6.19 has changed the "master" section to "server" in Puppet.settings.
  This fix updates the modules to check puppet_settings[:server] first then
  puppet_settings[:master].

* Tue Sep 22 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
- Set the default puppetserver ciphers to a safe set

* Fri Sep 11 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.1.0-0
- Added better auto-tuning support for puppetserver, based on best practices
- Added ReservedCodeCache puppetserver support

* Wed Jul 29 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.0.1-0
- Updated upper bound of inifile.

* Tue Jun 23 2020 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.0.0-0
- Resolved bug with systemd when simp_generate_types disabled

* Tue May 26 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
- Add EL8 Support
- Removed incron support in favor of using systemd path units to run
  simp_generate_types
- Attempts to activate the incron code will result in a warning message
- Add mitigation for https://puppet.com/security/cve/CVE-2020-7942/

* Wed Jan 08 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Added optional management of the Facter configuration file.

* Mon Jan 06 2020 Michael Morrone <michael.morrone@onyxpoint.com> - 8.0.0-0
- Removed the deprecated CA CRL pull cron job and the corresponding
  pupmod::ca_crl_pull_interval parameter
- Removed deprecated auth.conf support for the legacy pki module and
  the corresponding parameters:
  - pupmod::master::simp_auth::legacy_cacerts_all
  - pupmod::master::simp_auth::legacy_mcollective_all
  - pupmod::master::simp_auth::legacy_pki_keytabs_from_host
- Removed the deprecated pupmod::master::simp_auth::server_distribution parameter

* Tue Nov 19 2019 Luke Stigdon <git@lukestigdon.com> - 7.11.1-0
- Correct pupmod::master::profiler_output_file option name

* Mon Sep 02 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 7.11.1-0